Fix missions-list items word-wrap

--- a/src/web-ui/src/app/tabs/missions/missions-list/missions-list.component.css
+++ b/src/web-ui/src/app/tabs/missions/missions-list/missions-list.component.css
@@ -18,6 +18,7 @@
     cursor: move;
     background: white;
     font-size: 14px;
+    word-wrap: anywhere;
   }
 
   .cdk-drag-preview {
